Fix(script.js): Rework funcs align w/ project
Was built with logic of total boxes instead of box/side.
Remove unneeded functions as a result.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   background-color: rgb(29, 29, 118);
 }
 
-.footer {
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
